--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,9 +47,28 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.7.2'
+
+    implementation 'androidx.activity:activity-ktx:1.7.2'
+
+    // coroutine
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
+
+    // sweet alert
+    implementation("com.github.f0ris.sweetalert:library:1.6.2")
+
     //maps
-    implementation 'org.osmdroid:osmdroid-android:6.1.11'
+    implementation 'org.osmdroid:osmdroid-android:6.1.16'
+
 
     // Location
     implementation 'com.github.delight-im:Android-SimpleLocation:v1.1.0'
+
+
 }
