--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,5 +70,10 @@ dependencies {
     // Location
     implementation 'com.github.delight-im:Android-SimpleLocation:v1.1.0'
 
+    // ImageCompressor
+    implementation 'id.zelory:compressor:3.0.1'
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
 
 }
