--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,7 @@ dependencies {
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.15.1'
 
+    //    Animatoo
+//    implementation 'com.github.AtifSayings:Animatoo:1.0.1'
+
 }
