--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,10 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
-    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
-
-
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
 
     <application
         android:allowBackup="true"
@@ -24,22 +21,23 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".StatusActivity"
+            android:name=".PengaduanLainActivity"
             android:exported="false"
             android:parentActivityName=".SplashActivity"/>
+        <activity
+            android:name=".StatusActivity"
+            android:exported="false"
+            android:parentActivityName=".SplashActivity" />
         <activity
             android:name=".TindakLanjutActivity"
             android:exported="false" />
         <activity
             android:name=".PengaduanActivity"
-            android:exported="false">
-
-        </activity>
+            android:exported="false"
+            android:parentActivityName=".SplashActivity"></activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false">
-
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".SplashActivity"
             android:exported="true">
